<resources>
    <string name="app_name">NuomAddressBook</string>
    <string name="contact_name">%1$s %2$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">UK Phone Number</string>
    <string name="address">Address (optional)</string>
    <string name="save_contact">Save Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name_error_too_small">First name is too short</string>
    <string name="first_name_error_empty">First name cannot be empty</string>
    <string name="first_name_error_wrong_characters">First name has wrong characters</string>
    <string name="last_name_error_empty">Last name cannot be empty</string>
    <string name="last_name_too_small">Last name is too short</string>
    <string name="last_name_error_wrong_characters">Last name has wrong characters</string>
    <string name="email_error_empty">Email cannot be empty</string>
    <string name="email_error_too_small">Email is too short</string>
    <string name="email_error_missing_at_sign">Email is missing @ sign</string>
    <string name="email_error_wrong_domain_usage">Email domain is not acceptable</string>
    <string name="email_error_too_long_domain">Email domain is too long</string>
    <string name="email_error_wrong_characters">Email contains wrong characters</string>
    <string name="phone_number_error_empty">Phone number cannot be empty</string>
    <string name="phone_number_error_too_small">Phone number is too short</string>
    <string name="phone_number_error_wrong_prefix">Prefix should start with 07\.\.\.</string>
    <string name="phone_number_error_too_long">Phone number is too long</string>
    <string name="phone_number_error_wrong_characters">Phone number contains wrong characters</string>
    <string name="address_error_wrong_characters">Address contains wrong characters</string>
</resources>